<resources>
    <string name="app_name">EngineeringApp</string>
    <string name="password_textbox_hint">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="emailbox_hint">e-mail</string>
    <string name="register_text">Register</string>
    <string name="logo_description">Logo</string>
    <string name="login_tittle_textView">Login Screen</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registration_screen">Registration screen</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_textView">Log in</string>
    <string name="register">Register</string>
    <string name="information_about_collected_data">Now we need to collect few information about you that helps us to contact with you.We\'ll use them to ship your device and order a delivery man. Those informations are visible only for our company</string>
    <string name="let_us_know_about_you">Let us know about you</string>
    <string name="next">Next</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="street">Street</string>
    <string name="phone_number">Phone</string>
    <string name="lastname">Lastname</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="logout">LOGOUT</string>
    <string name="logout_for_text">Logout</string>
    <string name="settings">Settings</string>
    <string name="update_data">Update your data</string>
    <string name="new_case">Report a new device</string>
    <string name="error_empty_field">This field cannot be empty</string>
    <string name="error_passwords_do_not_match">Passwords don\'t match</string>
    <string name="registration_page_title">Registration</string>
    <string name="successful_registration">You have been successfully registered</string>
    <string name="select_device_type">Select device type</string>
    <string name="monitor">Monitor</string>
    <string name="projector">Projector</string>
    <string name="notebook">Notebook</string>
    <string name="desktop">Desktop</string>
    <string name="tv">TV</string>
    <string name="smartphone">Smartphone</string>
    <string name="other">Other</string>
</resources>