<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userdata_collect.UsersInputDataActivity"
    android:background="@color/primary">


    <TextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/let_us_know_about_you"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity=""
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_information"
        app:layout_constraintBottom_toTopOf="@id/tv_surname"
        tools:layout_editor_absoluteY="223dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_information" />

    <TextView
        android:id="@+id/tv_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/et_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintBottom_toTopOf="@id/et_street"/>

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/et_street"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
        android:id="@+id/tv_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/et_street"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_surname"
        app:layout_constraintBottom_toTopOf="@id/et_zip_code"/>

    <EditText
        android:id="@+id/et_street"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/et_zip_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_surname"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_zip_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip_code"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/et_zip_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_street"
        app:layout_constraintBottom_toTopOf="@id/tv_city"/>

    <EditText
        android:id="@+id/et_zip_code"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/et_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_street"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_country"
        app:layout_constraintEnd_toStartOf="@+id/et_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_zip_code"
        />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_zip_code"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/et_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_city"
        app:layout_constraintBottom_toTopOf="@id/btn_save"/>
    <EditText
        android:id="@+id/et_country"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_city"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        android:layout_marginBottom="16dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_country" />




</androidx.constraintlayout.widget.ConstraintLayout>



